--- a/etc_firewall/firewall.settings
+++ b/etc_firewall/firewall.settings
@@ -128,4 +128,8 @@ CHAINFORWARDFILTER="FORWARD-TRAFIC-FILTER"
 CHAINFORWARDFILTERTCP="FORWARD-TRAFIC-FILTER-TCP"
 CHAINFORWARDFILTERUDP="FORWARD-TRAFIC-FILTER-UDP"
 CHAINFORWARDFILTERICMP="FORWARD-TRAFIC-FILTER-ICM"
-CHAINFORWARDTRAFIC="FORWARD-TRAFIC"
+CHAINFORWARDTRAFIC="FT"
+
+CHAINPATMAIN="z-redirect-main"
+CHAINPATLOG="z-redirect-log"
+CHAINPOSTROUTINGNAT="NAT-TRAFIC"
