--- a/etc_firewall/firewall.settings
+++ b/etc_firewall/firewall.settings
@@ -74,7 +74,7 @@ declare -a WWDockerTCP=()
 declare -a WWDockerUDP=()
 
 declare -a blockedCountry="AE,BW,BY,BZ,CN,EG,HK,IL,JP,KR,KP,RU,SG,TN"
-declare -a blockedCountry2="IN,TW,UA,US"
+declare -a blockedCountry2="IN,TW,UA,US,IT,KW,BR,AR"
 
 CHAINIPALLOW="z-allow-ips"
 CHAINIPALLOWTCP="z-allow-ips-tcp"
@@ -131,4 +131,3 @@ CHAINFORWARDTRAFIC="FT"
 
 CHAINPATMAIN="z-redirect-main"
 CHAINPATLOG="z-redirect-log"
-CHAINPOSTROUTINGNAT="NAT-TRAFIC"
