add the capacity to prepare rules interface

--- a/etc_firewall/firewall.settings
+++ b/etc_firewall/firewall.settings
@@ -9,6 +9,7 @@ DUMPCO=/bin/ss
 DOCKER=/bin/docker
 IFCONFIG=/usr/sbin/ifconfig
 JQ=/usr/bin/jq
+FAILBAN=/usr/bin/fail2ban-client
 
 IPSLISTBADIP="bad_ip"
 IPSLISTGOODIP="good_ip"
