Update crowdsec new rules

--- a/etc_firewall/firewall.settings
+++ b/etc_firewall/firewall.settings
@@ -136,3 +136,6 @@ CHAINPATMAIN="z-redirect-main"
 CHAINPATLOG="z-redirect-log"
 
 saveFileGeoIPDB="/etc/firewall/GeoIPCountryWhois.csv"
+
+crowdsecSetIPBeginName="crowdsec-blacklists"
+crowdsecSetIP6BeginName="crowdsec6-blacklists"
